# langGithub

./: .gitignore  LANGGRAPH_EXPLANATION.md  NEON_SETUP_INSTRUCTIONS.md  README.md  UPDATE_ORS_KEY.md  check_github_workflow.py  check_pending.py  debug_payload.py  decode_ors_key.py  index.html  netlify.toml  package-lock.json  package.json  test_api.py  test_ors_api.py  test_ors_matrix_curl.py  test_with_real_ors.py
.github/workflows/: optimizer.yml
backend/: check_result.py  db.py  insert_test_data.py  logging_utils.py  models.py  optimizer.py  optimizer_langgraph.py  optimizer_simple.py  order_service.py  ors.py  ors_directions.py  ors_fallback.py  requirements.txt  sample_data.sql  schema.sql  schema_orders.sql  solver.py  workflow_builder.py
functions/: dispatch.mjs  package.json  result.mjs
netlify/functions/: api-dispatch.mjs  api-result.mjs  dispatch.mjs  driver-route.mjs  orders-create.mjs  orders-list.mjs  orders-track.mjs  orders-update.mjs  package.json  result.mjs  seed-orders.mjs  test-db.mjs
nodes/: __init__.py  base.py
nodes/database_fetch_node/: __init__.py  config.py  node.py  pyproject.toml  requirements.txt
nodes/or_tools_solver_node/: __init__.py  node.py
nodes/ors_matrix_node/: __init__.py  node.py  requirements.txt
nodes/save_results_node/: __init__.py  node.py
src/: App.tsx  leaflet.d.ts  styles.css
src/components/: CustomerOrderForm.tsx  DepotForm.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  InteractiveMap.tsx  LiveDriverMap.tsx  Loading.tsx  OrderForm.tsx  ProtectedRoute.tsx  RouteMap.tsx  VehicleForm.tsx
src/lib/: cn.ts
(+17 files in other folders)
